--- a/Weitianshi/pages/organization/org_search/org_search.wxss
+++ b/Weitianshi/pages/organization/org_search/org_search.wxss
@@ -65,7 +65,12 @@
 
 .memberInfo {
   border-bottom: 1rpx solid #e6e6e6;
-  /* margin-bottom: 40rpx;  */
+  padding-bottom: 40rpx;
+}
+
+.memberInfo:last-child {
+  border: 0;
+  padding-bottom:0;
 }
 
 .memberInfoLeft {
@@ -84,7 +89,7 @@
   font-size: 30rpx;
   color: #333;
   letter-spacing: 0;
-  line-height: 15px;
+  line-height: 30rpx;
   text-align: left;
 }
 
@@ -105,7 +110,7 @@
   color: #666;
   line-height: 28rpx;
   text-align: left;
-  margin-bottom: 26rpx;
+  margin-bottom:26rpx;
 }
 
 .memberDes {
@@ -118,5 +123,4 @@
   line-height: 32rpx;
   text-align: left;
   padding: 20rpx 24rpx;
-  margin-bottom: 40rpx;
 }
