--- a/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxss
+++ b/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxss
@@ -2,7 +2,17 @@ page {
   height: 100%;
   /* overflow: hidden; */
 }
-
+.investImg {
+  width: 100%;
+  height: 327.6rpx;
+  /* position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999; */
+}
+.investImg image{
+  width: 100%;
+}
 .media {
   width: 100%;
   height: auto;
@@ -20,11 +30,7 @@ page {
   border-bottom: 1px solid #e6e6e6;
 }
 
-.investImg {
-  width: 100%;
-  height: 327.6rpx;
-  background: red;
-}
+
 
 .investLogo {
   width: 20%;
@@ -33,7 +39,9 @@ page {
 .investLogo1 {
   width: 121.68rpx;
   height: 121.68rpx;
-  background: red;
+}
+.investLogo1 image{
+  width: 100%;
 }
 
 .investRight {
@@ -70,7 +78,8 @@ page {
 .investWheel {
   background: #009eff;
   border-radius: 2px;
-  width: 114.66rpx;
+  display: inline-block;
+  padding: 2rpx 20rpx;
   height: 37.44rpx;
   color: #fff;
   font-size: 10px;
@@ -92,12 +101,16 @@ page {
   -webkit-box-orient: vertical;
   margin-bottom: 24rpx;
 }
+.investInduryone{
+  display: inline-block
+}
 .investOther{
   font-size:12px;
 color:#666666;
 }
 .investLeft{
   margin-right: 20rpx;
+  display: inline-block
 }
 .investDetail{
   padding: 18rpx;
