--- a/Weitianshi/pages/organization/org_search/org_search.wxss
+++ b/Weitianshi/pages/organization/org_search/org_search.wxss
@@ -54,7 +54,12 @@
   background: #fff;
   padding: 32rpx;
 }
-
+.swiper-box .blockTitle{
+  text-align: left;
+}
+.swiper-box .memberDes{
+  text-align: left;
+}
 .blockTitle {
   font-size: 30rpx;
   color: #333;
