--- a/Weitianshi/pages/organization/org_search/org_search.wxml
+++ b/Weitianshi/pages/organization/org_search/org_search.wxml
@@ -12,24 +12,26 @@
   <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">投资领域</view>
   <view class="swiper-tab-list {{currentTab==3 ? 'on' : ''}}" data-current="3" bindtap="swichNav">机构成员</view>
 </view>
-<swiper>
+<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:945rpx" bindchange="bindChange">
   <swiper-item data-current='0'>
     <scroll-view style="height:100%;" scroll-y="true">
       <view class="outStyleBox">
         <view class="blockTitle">成员</view>
-        <view class="memberInfo flex">
-          <view class="memberInfoLeft"></view>
-          <view class="memberInfoRight">
-            <view class="flex memberInfoTop">
-              <view class="memberName">张孙峰的</view>
-              <view class="memberTitle">在职</view>
+        <block wx:for="{{memberList}}" wx:key="{{index}}">
+          <view class="memberInfo flex">
+            <view class="memberInfoLeft"></view>
+            <view class="memberInfoRight">
+              <view class="flex memberInfoTop">
+                <view class="memberName">{{memberList.member_name}}</view>
+                <view class="memberTitle">{{memberList.member_position}}</view>
+              </view>
+              <view class="flex memberCompany">
+                <label>杭州投着乐网络科技有限公司</label> · <label>联合创始人</label>
+              </view>
+              <view class="memberDes">{{memberList.member_introduce}}</view>
             </view>
-            <view class="flex memberCompany">
-            <label>杭州投着乐网络科技有限公司</label> · <label>联合创始人</label>
-            </view>
-            <view class="memberDes">这里是个人简介这里是个人简介 这里是个人简介这里是个人简介，字数可能会有点长这里是...</view>
           </view>
-        </view>
+        </block>
       </view>
     </scroll-view>
   </swiper-item>
